[package]
name = "correlation_flow"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/correlation_flow"
description  = "Optical flow measurement with image phase correlation"
categories = [
    "computer-vision",
    "embedded",
    "no-std",
]
keywords = [
    "camera",
    "imaging",
    "robotics"
]

[dependencies]
num-integer = {version = "0.1.43",  default-features=false }
num-traits = {version="0.2.12" , default-features=false }

[dev-dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-rtt-core = {version="0.2.1"}
px4flow_bsp = {version="0.1.6", path="../px4flow_bsp"}
stm32f4xx-hal = {version="0.8.3",  features = ["stm32f407", "rt"] }


