[package]
name = "correlation_flow"
version = "0.1.4"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/correlation_flow"
description  = "Optical flow measurement with image phase correlation"
categories = [
    "computer-vision",
    "embedded",
    "no-std",
]
keywords = [
    "camera",
    "imaging",
    "robotics"
]

[dependencies]
microfft = "0.3.0"
num-traits = {version="0.2.12", default-features=false, features=["libm"] }
num-complex = {version="0.2.4", default-features=false }

[profile.release]
debug = 1 # default is `false`; using `true` is also OK

[dev-dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-rtt-core = {version="0.2.1"}
px4flow_bsp = {version="0.2" }
stm32f4xx-hal = {version="0.8.3",  features = ["stm32f407", "rt"] }


